Prevent most "widget container" elements' content from overflowing alotted space
(Flex zone widgets excluded to keep drop shadows looking right)

--- a/assets/css/v2/bus_shelter/body/takeover.scss
+++ b/assets/css/v2/bus_shelter/body/takeover.scss
@@ -11,4 +11,5 @@
   left: 0px;
   width: 1080px;
   height: 1648px;
+  overflow: hidden;
 }
